--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,13 +1,10 @@
-* {
-  outline: 1px solid red;
-}
-
 .header  {
   font-family: monospace;
   background: papayawhip;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  padding: 8px;
 }
 
 .logo {
@@ -18,18 +15,13 @@
   padding: 4px 32px;
 }
 
-.left-links {
-  display: flex;
-}
-
-.right-links {
-  display: flex;
-  justify-content: flex-start;
-}
-
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 8px;
 }
 
 a {
